@@ -124,6 +124,10 @@ class TestRDocMarkupAttributeManager < MiniTest::Unit::TestCase
                  @am.flow("*\\bold*")
   end
 
+  def test_bold_html_escaped
+    assert_equal ['cat <b>dog</b>'], @am.flow('cat \<b>dog</b>')
+  end
+
   def test_combined
     assert_equal(["cat ", @em_on, "and", @em_off, " ", @bold_on, "dog", @bold_off],
                   @am.flow("cat _and_ *dog*"))
